# andrpccpp

./: .gitignore  CMakeLists.txt  readme.txt
androidthriftclient/: .project  AndroidManifest.xml
androidthriftclient/res/layout/: activity_main.xml
androidthriftclient/res/menu/: main.xml
androidthriftclient/res/values/: strings.xml
androidthriftclient/src/com/example/androidthriftclient/: MainActivity.java
androidthriftclient/src/shared/: SharedService.java  SharedStruct.java
androidthriftclient/src/tutorial/: Calculator.java  InvalidOperation.java  Operation.java  Work.java  tutorialConstants.java
cppclient/: cppclient.cbp  cppclient.depend  cppclient.layout  main.cpp
cppserver/: cppserver.cbp  cppserver.depend  cppserver.layout  main.cpp
gen-cpp/: Calculator.cpp  Calculator.h  Calculator_server.skeleton.cpp  SharedService.h  tutorial_constants.cpp  tutorial_constants.h  tutorial_types.cpp  tutorial_types.h
libandroidthrift/: .project  AndroidManifest.xml
libandroidthrift/res/values/: strings.xml
libandroidthrift/src/org/apache/thrift/transport/: TSocket.java
libcpp/: CMakeLists.txt
libcpp/src/thrift/: cxxfunctional.h  thrift-config.h
libcpp/src/thrift/concurrency/: Util.cpp
libcpp/src/thrift/transport/: PlatformSocket.h  THttpServer.cpp  TPipe.cpp  TPipeServer.cpp  TSocket.h
libcpp/src/thrift/windows/: GetTimeOfDay.cpp  WinFcntl.h  config.h
mingw/: tutorial.thrift
